修改动态创建类的bug